--- a/TaskMenager/Web.config
+++ b/TaskMenager/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="TaskDB" connectionString="Data Source=RASPUTIN\SQLEXPRESS;Initial Catalog=TaskDB;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
+    <add name="TaskDB" connectionString="Data Source=taskmenagerdb.database.windows.net;Initial Catalog=TaskMenager;User ID=dr4k3y;Password=Adms1200;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
