--- a/TaskMenager/TaskMenager.csproj
+++ b/TaskMenager/TaskMenager.csproj
@@ -138,7 +138,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <None Include="Properties\PublishProfiles\TaskMenager20200102093018 - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\TaskMenager20200108060102 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -167,6 +167,7 @@
     <Content Include="Views\Home\Tasks.cshtml" />
     <Content Include="Views\Home\ViewTasks.cshtml" />
     <Content Include="Views\Home\Edit.cshtml" />
+    <Content Include="Views\Home\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
