--- a/TaskMenager/Web.config
+++ b/TaskMenager/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="TaskDB" connectionString="Data Source=taskmenagerdb.database.windows.net;Initial Catalog=TaskMenager;User ID=dr4k3y;Password=Adms1200;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
+    <add name="TaskDB" connectionString="Server=tcp:taskmenager20200108060102dbserver.database.windows.net,1433;Initial Catalog=TaskMenager20200108060102_db;Persist Security Info=False;User ID=dr4k3y;Password=Adms1200;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
