signup login logout

--- a/TaskMenager/TaskManager.csproj
+++ b/TaskMenager/TaskManager.csproj
@@ -170,6 +170,7 @@
     <Content Include="Views\Home\Edit.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
     <Content Include="Views\Home\Register.cshtml" />
+    <Content Include="Views\Home\LogIn.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
